app/modules/notify/plugins/alert/less/alert.less
@import (inline) '../assets/sweetalert.css';
@import 'buttons';
@import 'colours';

.swal2-popup.swal2-modal {
  max-height: 91%;
  overflow-y: auto;
  details {
    display: block;
    margin-top: 20px;
  }
  summary {
    margin-bottom: 5px;
  }
  textarea {
    font-family: monospace;
  }
  button {
    min-width: 100px;
    margin: 10px 5px 20px 5px;

    &.swal2-cancel {
      .btn;
      .primary-hollow;
      font-size: 115%;
    }
    &.swal2-confirm {
      .btn;
      .primary;
      font-size: 115%;
    }
  }
  .swal2-icon {
    &.swal2-error {
      border-color: @alert-color;
      .swal2-icon-content { color: @alert-color; }
    }
    &.swal2-warning {
      border-color: @warning-color;
      .swal2-icon-content { color: @warning-color; }
    }
    &.swal2-info {
      border-color: @info-color;
      .swal2-icon-content { color: @info-color; }
    }
    &.swal2-success {
      .sa-line { background-color: @success-color; }
      .swal2-icon-content { color: @success-color; }
    }
  }

  .swal2-timer-progress-bar-container,
  .swal2-timer-progress-bar {
    height: .3em;
  }
  .swal2-timer-progress-bar {
    background: @secondary-color;
  }
}

// override to stop content being hidden
body.swal2-shown:not(.swal2-no-backdrop):not(.swal2-toast-shown) {
  overflow: initial !important;
}

body.swal2-toast-shown .swal2-container.swal2-top-right {
  top: 63px !important;
  max-width: 500px;
  width: 100%;
  .swal2-popup.swal2-toast {
    &.error { background-color: @alert-color; }
    &.info { background-color: @info-color; }
    &.warning { background-color: @warning-color; }
    &.success { background-color: @success-color; }
    .swal2-html-container {
      color: white;
    }
  }
}

